Finish Components and Data Bininding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<kk-header></kk-header>
+<div class="container">
+  <kk-recipes></kk-recipes>
+  <kk-shopping-list></kk-shopping-list>
+</div>
