--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,9 +3,10 @@
     <kk-shopping-list-add></kk-shopping-list-add>
     <hr>
     <ul class="list-group">
-      <a class="list-group-item" style="...">
-        
+    <template ngFor="let item of items">
+      <a class="list-group-item" style="..." >
       </a>
+      </template>
     </ul>
   </div>
 </div>
