--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -8,7 +8,7 @@
     <h1>{{selectedRecipe?.name}}</h1>
   </div>
   <div class="col-xs-12">
-    <button class="btn btn-success">To Shopping List</button>
+    <button class="btn btn-success" (click)="onAddToShoppingList()">To Shopping List</button>
     <button class="btn btn-primary">Edit</button>
     <button class="btn btn-danger">Delete</button>
   </div>
@@ -22,5 +22,11 @@
 <div class="row">
   <div class="col-xs-12">
     Ingredients
+    <ul class="list-group">
+      <a class="list-group-item" *ngFor="let item of selectedRecipe?.ingredients">
+        {{ item.name }} ({{ item.amount }})
+      </a>
+    </ul>
+
   </div>
 </div>
