--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <kk-header></kk-header>
 <div class="container">
-  <kk-recipes></kk-recipes>
-  <kk-shopping-list></kk-shopping-list>
+  <router-outlet></router-outlet>
 </div>
