--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,10 +1,12 @@
 <div class="row">
   <div class="col-md-5">
     Recipes List
-    <kk-recipe-list (recipeSelected)="selectedRecipe = $event"></kk-recipe-list>
+    <!-- <kk-recipe-list (recipeSelected)="selectedRecipe = $event"></kk-recipe-list> -->
+    <kk-recipe-list></kk-recipe-list>
   </div>
   <div class="col-md-7">
     Recipes Details
-    <kk-recipe-detail [selectedRecipe]="selectedRecipe"></kk-recipe-detail>
+    <router-outlet></router-outlet>
+    <!-- <kk-recipe-detail [selectedRecipe]="selectedRecipe"></kk-recipe-detail> -->
   </div>
 </div>
