--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,7 +8,7 @@
   <div class="col-xs-12">
     <ul class="list-group">
 <!--       <kk-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe" (click)="onSelected(recipe)"></kk-recipe-item> -->
-    <kk-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe"></kk-recipe-item>
+    <kk-recipe-item *ngFor="let recipe of recipes; let i = index" [recipe]="recipe" [recipeId]="i"></kk-recipe-item>
     </ul>
   </div>
 </div>
