--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -20,8 +20,8 @@
           aria-expanded="false">Recipe Management <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a (click)="onStore()">Store Recipe</a></li>
-            <li><a (click)="onFetch()">Retrive Recipe</a></li>
+            <li><a (click)="onStore()" style="cursor: pointer;">Store Recipe</a></li>
+            <li><a (click)="onFetch()" style="cursor: pointer;">Retrive Recipe</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">LogOut</a></li>
           </ul>
